<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <Button 
        android:id="@+id/btn_create_db"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_create_db"/>
    
    <Button 
        android:id="@+id/btn_udpate_db"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_update_db"/>
    
    <Button 
        android:id="@+id/btn_delete_db"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_delete_db"/>
    
    <Button 
        android:id="@+id/btn_insert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_insert"/>
    
    <Button 
        android:id="@+id/btn_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_update"/>
    
    <Button 
        android:id="@+id/btn_query"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_query"/>

</LinearLayout>
